--- a/src/app/pages/setting/components/courses/create-course/create-course.component.html
+++ b/src/app/pages/setting/components/courses/create-course/create-course.component.html
@@ -7,7 +7,7 @@
     <form [formGroup]="courseForm">
       <div nz-row [nzGutter]=[16,16]>
         <div nz-col [nzSpan]="8">
-  `          <span class="text-label">
+            <span class="text-label">
               Tên khóa học
               <span class="text-danger">*</span>
             </span>
