hotfix: fix width benefit table

--- a/src/app/pages/e-learning-membership/components/config/config-detail/config-detail.component.html
+++ b/src/app/pages/e-learning-membership/components/config/config-detail/config-detail.component.html
@@ -56,7 +56,7 @@
               <tr>
                 <th nzAlign="center" nzWidth="50%">Quyền lợi dành cho bạn</th>
                 <th nzAlign="center" *ngFor="let policy of policyList">{{policy.name}}</th>
-                <th></th>
+                <th nzWidth="10%"></th>
               </tr>
             </thead>
             <tbody>
