--- a/src/app/pages/organization/components/create-organization/create-organization.component.html
+++ b/src/app/pages/organization/components/create-organization/create-organization.component.html
@@ -207,6 +207,14 @@
 
         <div nz-col [nzSpan]="9" >
           <span class="text-label">
+            Tên miền trang Forum
+          </span>
+
+          <input nz-input formControlName="websiteForum">
+        </div>
+
+        <div nz-col [nzSpan]="9" >
+          <span class="text-label">
             Tên miền trang chủ
           </span>
 
