--- a/src/app/pages/payment/components/payment-auth/payment-auth.component.html
+++ b/src/app/pages/payment/components/payment-auth/payment-auth.component.html
@@ -25,6 +25,8 @@
       <table-column header="Tên học viên" key="name" [width]="'200px'"></table-column>
       <table-column header="Email" key="email" [width]="'180px'"></table-column>
       <table-column header="SĐT" key="phoneNumber" [width]="'180px'"></table-column>
+      <table-column header="Lớp" key="className" [width]="'180px'"></table-column>
+      <table-column header="Khóa học" key="courseName" [width]="'180px'"></table-column>
       <table-column header="Nhân viên chăm sóc" key="caregiverName" [width]="'200px'"></table-column>
       <table-column header="Số tiền" key="price" [width]="'180px'">
         <ng-template appCell let-data>
