add event module

--- a/src/app/pages/e-learning-membership/components/request-upgrade/request-upgrade.component.html
+++ b/src/app/pages/e-learning-membership/components/request-upgrade/request-upgrade.component.html
@@ -20,17 +20,18 @@
       <table-column header="Tên học viên" key="fullName" [width]="'180px'"></table-column>
       <table-column header="Mã học viên" key="codeUser" [width]="'180px'"></table-column>
       <table-column header="Số điện thoại" key="phoneNumber" [width]="'180px'"></table-column>
+      <table-column header="Nguời giới thiệu" key="userReferralName" [width]="'180px'"></table-column>
       <table-column header="Số tiền" key="price" [width]="'180px'">
         <ng-template appCell let-data>
           {{data.price | currency: 'VND'}}
-        </ng-template>
+        </ng-template>.
       </table-column>
       <table-column header="Thời hạn gói" key="priceMemberPolicyType" [width]="'180px'">
         <ng-template appCell let-data>
-          <span *ngIf="data.paymentMethod === 1">Gói một tháng</span>
-          <span *ngIf="data.paymentMethod === 2">Gói 3 tháng</span>
-          <span *ngIf="data.paymentMethod === 3">Gói 1 năm</span>
-          <span *ngIf="data.paymentMethod === 4">Gói vĩnh viễn</span>
+          <span *ngIf="data.priceMemberPolicyType === 1">Gói một tháng</span>
+          <span *ngIf="data.priceMemberPolicyType === 2">Gói 3 tháng</span>
+          <span *ngIf="data.priceMemberPolicyType === 3">Gói 1 năm</span>
+          <span *ngIf="data.priceMemberPolicyType === 4">Gói vĩnh viễn</span>
         </ng-template>
       </table-column>
       <table-column header="Hạng thành viên" key="memberPolicyLevelName" [width]="'180px'"></table-column>
