--- a/src/app/pages/organization/components/create-organization/create-organization.component.html
+++ b/src/app/pages/organization/components/create-organization/create-organization.component.html
@@ -207,7 +207,7 @@
 
         <div nz-col [nzSpan]="9" >
           <span class="text-label">
-            Tên miền trang Forum
+            Tên miền trang diễn đàn
           </span>
 
           <input nz-input formControlName="websiteForum">
