--- a/src/app/pages/payment/components/payment-auth/payment-auth.component.html
+++ b/src/app/pages/payment/components/payment-auth/payment-auth.component.html
@@ -27,6 +27,7 @@
       <table-column header="SĐT" key="phoneNumber" [width]="'180px'"></table-column>
       <table-column header="Lớp" key="className" [width]="'180px'"></table-column>
       <table-column header="Khóa học" key="courseName" [width]="'180px'"></table-column>
+      <table-column header="Mã đơn hàng" key="orderCode" [width]="'180px'"></table-column>
       <table-column header="Nhân viên chăm sóc" key="caregiverName" [width]="'200px'"></table-column>
       <table-column header="Số tiền" key="price" [width]="'180px'">
         <ng-template appCell let-data>
