--- a/src/app/pages/e-learning-student/components/taking-care-e-student/taking-care-e-student.component.html
+++ b/src/app/pages/e-learning-student/components/taking-care-e-student/taking-care-e-student.component.html
@@ -28,7 +28,7 @@
       <table-column header="Số điện thoại" key="mobile" [width]="'120px'"></table-column>
       <table-column header="Email" key="email" [width]="'200px'"></table-column>
       <table-column header="Mã học viên" key="code" [width]="'180px'"></table-column>
-      <table-column header="Người giới thiệu" key="userRef" [width]="'180px'"></table-column>
+      <table-column header="Người giới thiệu" key="userRefName" [width]="'180px'"></table-column>
       <table-column header="Nhân viên chăm sóc" key="caregiverName" [width]="'180px'"></table-column>
       <table-column header="Trạng thái" key="status" [width]="'180px'">
         <ng-template appCell let-data>
