--- a/src/app/pages/event/components/create-event/create-event.component.html
+++ b/src/app/pages/event/components/create-event/create-event.component.html
@@ -1,1 +1,123 @@
-<p>create-event works!</p>
+<div class="title-page">
+  {{isCreate? 'Tạo mới sự kiện' : 'Chỉnh sửa sự kiện'}}
+</div>
+
+<div nz-row [nzGutter]="{ xs: 8, sm: 16, md: 24, lg: 32 }">
+  <div nz-col [nzXs]="24" [nzSm]="24" [nzMd]="20" [nzLg]="20">
+    <form [formGroup]="eventForm">
+      <div nz-row [nzGutter]="[16, 16]">
+        <div nz-col [nzXs]="24" [nzSm]="12" [nzMd]="8">
+          <span class="text-label">
+            Tên sự kiện
+            <span class="text-danger">*</span>
+          </span>
+
+          <input
+            nz-input autofocus formControlName="title"
+            [nzStatus]="(eventForm.get('title')?.invalid &&
+                        (eventForm.get('title')?.touched || isSubmit)) ? 'error' : ''">
+          <span
+            class="text-danger"
+            *ngIf="(eventForm.get('title')?.touched || isSubmit)  &&
+                    eventForm.get('title')?.hasError('required')">
+              Tên sự kiện không được để trống
+          </span>
+        </div>
+
+        <div nz-col [nzXs]="24" [nzSm]="12" [nzMd]="8">
+          <span class="text-label">
+            Thời gian tổ chức
+            <span class="text-danger">*</span>
+          </span>
+
+          <nz-date-picker nzShowTime formControlName="dateOfEvent"
+                          [nzStatus]="(eventForm.get('dateOfEvent')?.invalid &&
+                                      (eventForm.get('dateOfEvent')?.touched || isSubmit)) ? 'error' : ''">
+          </nz-date-picker>
+
+          <span
+            class="text-danger"
+            *ngIf="(eventForm.get('dateOfEvent')?.touched || isSubmit)  &&
+                    eventForm.get('dateOfEvent')?.hasError('required')">
+              Địa điểm không được để trống
+          </span>
+        </div>
+
+        <div nz-col [nzXs]="24" [nzSm]="12" [nzMd]="8">
+          <span class="text-label">
+            Trạng thái
+          </span>
+
+          <nz-switch formControlName="status" style="display: block"></nz-switch>
+        </div>
+
+        <div nz-col [nzXs]="24" [nzSm]="12" [nzMd]="8">
+          <span class="text-label">
+            Ảnh đại diện
+            <span class="text-danger">*</span>
+          </span>
+
+          <div style="display: flex">
+            <input nz-input formControlName="imagePath"
+                   [nzStatus]="(eventForm.get('imagePath')?.invalid &&
+                               (eventForm.get('imagePath')?.touched || isSubmit)) ? 'error' : ''">
+            <button nz-button nzType="primary" (click)="onSelectFile()">
+              <span nz-icon nzType="upload"></span>
+            </button>
+          </div>
+
+          <span
+            class="text-danger"
+            *ngIf="(eventForm.get('imagePath')?.touched || isSubmit)  &&
+                    eventForm.get('imagePath')?.hasError('required')">
+              Ảnh đại diện không được để trống
+          </span>
+        </div>
+
+
+        <div nz-col [nzXs]="24" [nzSm]="12" [nzMd]="8">
+          <span class="text-label">
+            Địa điểm
+            <span class="text-danger">*</span>
+          </span>
+
+          <input nz-input formControlName="local"
+                 [nzStatus]="(eventForm.get('local')?.invalid &&
+                             (eventForm.get('local')?.touched || isSubmit)) ? 'error' : ''">
+          <span
+            class="text-danger"
+            *ngIf="(eventForm.get('local')?.touched || isSubmit)  &&
+                    eventForm.get('local')?.hasError('required')">
+              Địa điểm không được để trống
+          </span>
+        </div>
+
+        <div nz-col [nzXs]="24" [nzSm]="12" [nzMd]="8">
+          <span class="text-label">
+            Link sự kiện
+            <span class="text-danger">*</span>
+          </span>
+
+          <input nz-input formControlName="link"
+                 [nzStatus]="(eventForm.get('link')?.invalid &&
+                             (eventForm.get('link')?.touched || isSubmit)) ? 'error' : ''">
+          <span
+            class="text-danger"
+            *ngIf="(eventForm.get('link')?.touched || isSubmit)  &&
+                    eventForm.get('link')?.hasError('required')">
+              Link sự kiện không được để trống
+          </span>
+        </div>
+      </div>
+    </form>
+  </div>
+
+  <div nz-col [nzXs]="24" [nzSm]="24" [nzMd]="4" [nzLg]="4">
+    <div class="btn-panel">
+      <button class="btn primary" nz-button (click)="edit()">
+        {{isCreate? 'Tạo mới' : 'Lưu'}}
+      </button>
+      <button class="btn" nz-button (click)="navigateBack()">Hủy</button>
+    </div>
+  </div>
+</div>
