--- a/src/app/pages/student/components/taking-care-student/taking-care-student.component.html
+++ b/src/app/pages/student/components/taking-care-student/taking-care-student.component.html
@@ -50,7 +50,7 @@
           <span *ngIf="data.isPay === 5">Hoàn tiền thừa</span>
         </ng-template>
       </table-column>
-      <table-column header="Xác thực thanh toán" key="isVerifyPay" [width]="'180px'">
+      <table-column header="Thanh toán học phí" key="isVerifyPay" [width]="'180px'">
         <ng-template appCell let-data>
           <span class="text-invalid" *ngIf="!data.isVerifyPay">Chưa xác thực</span>
           <span class="text-valid" *ngIf="data.isVerifyPay">Đã xác thực</span>
