--- a/src/app/pages/organization/components/organization/organization.component.html
+++ b/src/app/pages/organization/components/organization/organization.component.html
@@ -31,6 +31,12 @@
           nz-icon nzType="tool" nzTheme="outline" (click)="updatePermission(data)"></span>
       </span>
 
+      <span class="custom-action">
+        <span
+          nzTooltipTitle="Cấu hình rút tiền" nzTooltipPlacement="top" nz-tooltip
+          nz-icon nzType="dollar" nzTheme="outline" (click)="withdrawConfig()"></span>
+      </span>
+
 <!--      <span class="custom-action">-->
 <!--        <span-->
 <!--          nzTooltipTitle="Xóa" nzTooltipPlacement="top" nz-tooltip-->
