add gift membership

--- a/src/app/pages/e-learning-student/components/taking-care-e-student/taking-care-e-student.component.html
+++ b/src/app/pages/e-learning-student/components/taking-care-e-student/taking-care-e-student.component.html
@@ -67,8 +67,8 @@
             <span nz-icon nzType="phone" nzTheme="outline"></span>
           </span>
 
-          <span class="custom-action"
-                nz-tooltip nzTooltipTitle="Nâng gói thành viên">
+          <span class="custom-action" (click)="activeMembership(data)"
+                nz-tooltip nzTooltipTitle="Tặng gói thành viên">
             <span nz-icon nzType="arrow-up" nzTheme="outline"></span>
           </span>
 
