add withdraw module

--- a/src/app/pages/e-learning-membership/components/request-upgrade/request-upgrade.component.html
+++ b/src/app/pages/e-learning-membership/components/request-upgrade/request-upgrade.component.html
@@ -24,7 +24,7 @@
       <table-column header="Số tiền" key="price" [width]="'180px'">
         <ng-template appCell let-data>
           {{data.price | currency: 'VND'}}
-        </ng-template>.
+        </ng-template>
       </table-column>
       <table-column header="Thời hạn gói" key="priceMemberPolicyType" [width]="'180px'">
         <ng-template appCell let-data>
