add resouce component

--- a/src/app/pages/e-learning-course/components/course-list/course-list.component.html
+++ b/src/app/pages/e-learning-course/components/course-list/course-list.component.html
@@ -60,6 +60,11 @@
                 nz-tooltip nzTooltipTitle="Chương trình học">
             <span nz-icon nzType="appstore-add" nzTheme="outline" class="custom-icon"></span>
           </span>
+
+          <span class="custom-action" (click)="navigateToResources(data)"
+                nz-tooltip nzTooltipTitle="Tài nguyên">
+            <span nz-icon nzType="gold" nzTheme="outline" class="custom-icon"></span>
+          </span>
         </ng-template>
       </table-column>
     </app-table>
