--- a/src/app/pages/e-learning-course/components/resources/resources-list/resources-list.component.html
+++ b/src/app/pages/e-learning-course/components/resources/resources-list/resources-list.component.html
@@ -40,7 +40,7 @@
 
         <ng-template appCell let-data>
           <span class="custom-action" (click)="edit(data)"
-                nz-tooltip nzTooltipTitle="Chỉnh sửa video">
+                nz-tooltip nzTooltipTitle="Chỉnh sửa tài nguyên">
             <span nz-icon nzType="edit" nzTheme="outline" class="custom-icon"></span>
           </span>
         </ng-template>
